# serializer version: 1
# name: test_media_player_entity_setup[speaker][media_player.vizio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'sound_mode_list': list([
        'Music',
        'Movie',
      ]),
      'source_list': list([
        'HDMI',
        'USB',
        'Bluetooth',
        'AUX',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.vizio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'vizio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 85389>,
    'translation_key': None,
    'unique_id': 'testid',
    'unit_of_measurement': None,
  })
# ---
# name: test_media_player_entity_setup[speaker][media_player.vizio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'speaker',
      'friendly_name': 'Vizio',
      'is_volume_muted': False,
      'sound_mode': 'Music',
      'sound_mode_list': list([
        'Music',
        'Movie',
      ]),
      'source': 'HDMI',
      'source_list': list([
        'HDMI',
        'USB',
        'Bluetooth',
        'AUX',
      ]),
      'supported_features': <MediaPlayerEntityFeature: 85389>,
      'volume_level': 0.4838709677419355,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.vizio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_media_player_entity_setup[tv][media_player.vizio-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'sound_mode_list': list([
        'Music',
        'Movie',
      ]),
      'source_list': list([
        'HDMI',
        'USB',
        'Bluetooth',
        'AUX',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.vizio',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.TV: 'tv'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'vizio',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 85437>,
    'translation_key': None,
    'unique_id': 'testid',
    'unit_of_measurement': None,
  })
# ---
# name: test_media_player_entity_setup[tv][media_player.vizio-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'tv',
      'friendly_name': 'Vizio',
      'is_volume_muted': False,
      'sound_mode': 'Music',
      'sound_mode_list': list([
        'Music',
        'Movie',
      ]),
      'source': 'HDMI',
      'source_list': list([
        'HDMI',
        'USB',
        'Bluetooth',
        'AUX',
      ]),
      'supported_features': <MediaPlayerEntityFeature: 85437>,
      'volume_level': 0.15,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.vizio',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
